# hosh

./: .coveragerc  README-edit.md  README.md  changelog.txt  pyproject.toml  release.sh
.github/workflows/: test.yml
docs/: config.html  groups.html  hosh_.html  index.html  theme.html
docs/misc/: colors.html  core.html  exception.html  helper.html  identity.html  index.html  math.html  root.html
docs/misc/encoding/: base.html  base777.html  index.html
examples/: operation.py
experiments/: bench_hosh.py  zhg.py
src/hosh/: __init__.py  _internals_appearance.py  config.py  groups.py  hosh.py  hosh_.py  theme.py
src/hosh/misc/: __init__.py  colors.py  core.py  exception.py  helper.py  identity.py  math.py  root.py
src/hosh/misc/encoding/: __init__.py  base.py  base777.py
tests/: test_hosh.py
