[tool.poetry]
name = "hosh"
version = "3.250405.1"
description = "Predictable Operable HaSH-based identifiers"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "hosh", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
blake3 = "^1.0.4"
colored = "1.4.2" # Newer minor version has breaking changes.
ansi2html = "^1.6.0"
bs4 = "^0.0.1"
twine = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
ipython = "^7.27.0"
black = "^21.9b0"
flake8 = "^4.0.1"
autoreadme = "^0.2302.3"
docutils = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# 
# [[tool.poetry.source]]
# name = "dvpypi"
# url = "http://localhost:8080/simple"
